package Competition;


 class Match  {


	/**
	* auto gen docs
	**/
 	public    Match(Competitor c1,Competitor c2) ;


}