package Competition.meeting;


 class Tournement implements Competition  {


	/**
	* auto gen docs
	**/
 	public    Tournement() ;


}